# memfun

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  memfun.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/agent-architect/: AGENT.md
agents/code-reviewer/: AGENT.md
agents/coder-agent/: AGENT.md
agents/debug-agent/: AGENT.md
agents/file-agent/: AGENT.md
agents/orchestrator/: AGENT.md
docker/: .dockerignore  Dockerfile  docker-compose.distributed.yml  docker-compose.yml  nats.conf
docs/: LEARNINGS.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  index.md
evals/: README.md  hetzner_setup.sh  predictions_test.jsonl  run_one.sh  swebench_harness.py
tests/: conftest.py  test_code_cleaning.py  test_code_map.py  test_config.py  test_context_first.py  test_decomposer.py  test_decomposer_hierarchical.py  test_decomposer_overlap.py  test_doctor.py  test_effectiveness.py  test_event_bus.py  test_filesystem_scope.py  test_health.py  test_init_wizard_multiprovider.py  test_integration.py  test_lifecycle.py  test_lifecycle_pool.py  test_memory.py  test_optimizer.py  test_orchestrator_concurrency.py  test_query_resolver.py  test_registry.py  test_runtime_builder.py  test_sandbox.py  test_session.py  test_shared_spec.py  test_skill_registry.py  test_skills.py  test_specialists.py  test_state_store.py  test_triage.py  test_validation_experiment_a.py  test_workflow.py  test_worktree.py  test_worktree_cleanup_gate.py  test_worktree_integration.py
(+18 files in other folders)
